[package]
name = "falcon"
version = "0.5.4"
authors = [ "endeavor <endeavor@rainbowsandpwnies.com>" ]
repository = "https://github.com/falconre/falcon"
description = "A Binary Analysis Framework in Rust"
license = "Apache-2.0"
readme = "README.md"
edition = "2021"

[dependencies]
bad64 = { version="0.5", features=["std"] }
base64 = "0.13"
bitflags = "1.2"
falcon_capstone = "0.5.1"
error-chain = "0.12"
goblin = "0.4"
log = "0.4"
num-bigint = {version="0.4", features=["serde"]}
num-traits = "0.2"
serde_derive = "1.0"
serde_json = "1.0"
serde = {version="1.0", features=["rc"]}
rustc-hash = "1.1.0"


[features]
default = ["capstone4"]
thread_safe = []
capstone4 = ["falcon_capstone/capstone4"]
static = ["falcon_capstone/static"]
il-expression-ashr = []

[lib]
name = "falcon"
path = "lib/lib.rs"
