[package]
name = "falcon"
version = "0.6.0"
authors = [ "endeavor <endeavor@rainbowsandpwnies.com>" ]
repository = "https://github.com/falconre/falcon"
description = "A Binary Analysis Framework in Rust"
license = "Apache-2.0"
readme = "README.md"
edition = "2021"

[dependencies]
bad64 = { version="0.6", features=["std"] }
base64 = "0.21"
bitflags = "1.2"
falcon_capstone = "0.5.3"
thiserror = "1"
goblin = "0.6"
log = "0.4"
num-bigint = {version="0.4", features=["serde"]}
num-traits = "0.2"
serde_json = "1.0"
serde = {version="1.0", features=["derive", "rc"]}
rustc-hash = "1.1.0"


[features]
thread_safe = []

[lib]
name = "falcon"
path = "lib/lib.rs"
